[gd_scene load_steps=5 format=3 uid="uid://bnds30tappeob"]

[ext_resource type="Script" path="res://Scenes/Placeables/Web.gd" id="1_s5xpe"]
[ext_resource type="Texture2D" uid="uid://c3xgockc1kw0d" path="res://Assets/Buildings/webs.png" id="2_ej4vu"]
[ext_resource type="Script" path="res://Scenes/Placeables/websprite.gd" id="3_j0ogo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kb48j"]
radius = 32.0

[node name="Web" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_s5xpe")
can_traverse = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kb48j")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.47451, 0.47451, 0.47451, 1)
scale = Vector2(4, 4)
texture = ExtResource("2_ej4vu")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)
script = ExtResource("3_j0ogo")

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_break_timer_timeout"]
